# mcp-diff

./: .gitignore  README.md  pyproject.toml
mcp_diff/: __init__.py  cli.py  client.py  diff.py
tests/: test_diff.py
