[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-diff"
version = "0.1.0"
description = "Schema lockfile and breaking-change detector for MCP servers — like package-lock.json for MCP"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "model-context-protocol", "schema", "diff", "breaking-changes", "ci"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.scripts]
mcp-diff = "mcp_diff.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_diff"]
